--- a/Baseball Case Study.ipynb
+++ b/Baseball Case Study.ipynb
@@ -3757,7 +3757,7 @@
   {
    "cell_type": "code",
    "execution_count": 196,
-   "id": "7926ef7f",
+   "id": "bd285314",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3767,7 +3767,7 @@
   {
    "cell_type": "code",
    "execution_count": 197,
-   "id": "fe198588",
+   "id": "b91e0938",
    "metadata": {},
    "outputs": [
     {
@@ -3912,7 +3912,7 @@
   {
    "cell_type": "code",
    "execution_count": 198,
-   "id": "caf4686f",
+   "id": "9e1c0bee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3923,7 +3923,7 @@
   {
    "cell_type": "code",
    "execution_count": 199,
-   "id": "0eaf2a24",
+   "id": "aaf97d1f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3933,7 +3933,7 @@
   {
    "cell_type": "code",
    "execution_count": 200,
-   "id": "108e5fe9",
+   "id": "58dc34e5",
    "metadata": {},
    "outputs": [
     {
@@ -4033,7 +4033,7 @@
   {
    "cell_type": "code",
    "execution_count": 201,
-   "id": "4fd381ee",
+   "id": "551b48e8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4043,7 +4043,7 @@
   {
    "cell_type": "code",
    "execution_count": 202,
-   "id": "a857ef2f",
+   "id": "548624ca",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4056,7 +4056,7 @@
   {
    "cell_type": "code",
    "execution_count": 203,
-   "id": "17524497",
+   "id": "c70129b4",
    "metadata": {},
    "outputs": [
     {
@@ -4195,7 +4195,7 @@
   {
    "cell_type": "code",
    "execution_count": 204,
-   "id": "e967d143",
+   "id": "d2de3fa4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4205,7 +4205,7 @@
   {
    "cell_type": "code",
    "execution_count": 205,
-   "id": "3914a3d5",
+   "id": "dea6fa53",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4215,7 +4215,7 @@
   {
    "cell_type": "code",
    "execution_count": 206,
-   "id": "268c3c77",
+   "id": "f7fcbf11",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4225,7 +4225,7 @@
   {
    "cell_type": "code",
    "execution_count": 207,
-   "id": "c5b90429",
+   "id": "471492dc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4238,7 +4238,7 @@
   {
    "cell_type": "code",
    "execution_count": 208,
-   "id": "f97fc650",
+   "id": "70876aaa",
    "metadata": {},
    "outputs": [
     {
@@ -4371,7 +4371,7 @@
   {
    "cell_type": "code",
    "execution_count": 209,
-   "id": "c31a1541",
+   "id": "6cbf2aeb",
    "metadata": {},
    "outputs": [
     {
@@ -4486,7 +4486,7 @@
   {
    "cell_type": "code",
    "execution_count": 210,
-   "id": "2a878ae3",
+   "id": "8b5d054a",
    "metadata": {},
    "outputs": [
     {
@@ -4520,7 +4520,7 @@
   {
    "cell_type": "code",
    "execution_count": 211,
-   "id": "3fe34164",
+   "id": "881cd6af",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4530,7 +4530,7 @@
   {
    "cell_type": "code",
    "execution_count": 212,
-   "id": "b78e1d22",
+   "id": "1324ffae",
    "metadata": {},
    "outputs": [
     {
@@ -4564,7 +4564,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "537eac53",
+   "id": "73877f5e",
    "metadata": {},
    "source": [
     "# Outliers"
@@ -4573,7 +4573,7 @@
   {
    "cell_type": "code",
    "execution_count": 213,
-   "id": "c1cbee8e",
+   "id": "ff444976",
    "metadata": {},
    "outputs": [
     {
@@ -4754,7 +4754,7 @@
   {
    "cell_type": "code",
    "execution_count": 214,
-   "id": "1db674ce",
+   "id": "c227b3db",
    "metadata": {},
    "outputs": [
     {
@@ -4777,7 +4777,7 @@
   {
    "cell_type": "code",
    "execution_count": 215,
-   "id": "9f9369bc",
+   "id": "706c7c82",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4787,7 +4787,7 @@
   {
    "cell_type": "code",
    "execution_count": 216,
-   "id": "c377b7f7",
+   "id": "97ffe522",
    "metadata": {},
    "outputs": [
     {
@@ -4811,7 +4811,7 @@
   {
    "cell_type": "code",
    "execution_count": 217,
-   "id": "226b2b3d",
+   "id": "2873e048",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4821,7 +4821,7 @@
   {
    "cell_type": "code",
    "execution_count": 218,
-   "id": "450f8c5a",
+   "id": "6310a9d9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4835,7 +4835,7 @@
   {
    "cell_type": "code",
    "execution_count": 219,
-   "id": "bf30e058",
+   "id": "e4c0534a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4849,7 +4849,7 @@
   {
    "cell_type": "code",
    "execution_count": 220,
-   "id": "123d5372",
+   "id": "9876a818",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4863,7 +4863,7 @@
   {
    "cell_type": "code",
    "execution_count": 221,
-   "id": "7d3317fa",
+   "id": "0848ee71",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4877,7 +4877,7 @@
   {
    "cell_type": "code",
    "execution_count": 222,
-   "id": "2da78ab2",
+   "id": "8d4faf25",
    "metadata": {},
    "outputs": [
     {
@@ -5058,7 +5058,7 @@
   {
    "cell_type": "code",
    "execution_count": 223,
-   "id": "01556e29",
+   "id": "64ef4d39",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5068,7 +5068,7 @@
   {
    "cell_type": "code",
    "execution_count": 224,
-   "id": "91445774",
+   "id": "876f7413",
    "metadata": {},
    "outputs": [
     {
@@ -5103,7 +5103,7 @@
   {
    "cell_type": "code",
    "execution_count": 225,
-   "id": "81f84b66",
+   "id": "ba51441b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5112,7 +5112,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fc9c2fd4",
+   "id": "76a6252b",
    "metadata": {},
    "source": [
     "# Transformation"
@@ -5121,7 +5121,7 @@
   {
    "cell_type": "code",
    "execution_count": 226,
-   "id": "c9b22cfe",
+   "id": "5151239a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5132,7 +5132,7 @@
   {
    "cell_type": "code",
    "execution_count": 229,
-   "id": "261229af",
+   "id": "584ee766",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5143,7 +5143,7 @@
   {
    "cell_type": "code",
    "execution_count": 230,
-   "id": "35b2f70c",
+   "id": "9bbc02a4",
    "metadata": {},
    "outputs": [
     {
@@ -5178,7 +5178,7 @@
   {
    "cell_type": "code",
    "execution_count": 231,
-   "id": "3bd6d736",
+   "id": "70b77ba4",
    "metadata": {},
    "outputs": [
     {
@@ -5279,7 +5279,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4b2c02c4",
+   "id": "0ded28e9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5288,7 +5288,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ed47e0ba",
+   "id": "2ae9f771",
    "metadata": {},
    "source": [
     "# Standardization"
@@ -5297,7 +5297,7 @@
   {
    "cell_type": "code",
    "execution_count": 232,
-   "id": "e5b1af9c",
+   "id": "b64b2791",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5308,7 +5308,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "48fdee38",
+   "id": "0c931008",
    "metadata": {},
    "source": [
     "# Seprate independent and dependent features"
@@ -5317,7 +5317,7 @@
   {
    "cell_type": "code",
    "execution_count": 237,
-   "id": "ecdd8023",
+   "id": "45ea4010",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5327,7 +5327,7 @@
   {
    "cell_type": "code",
    "execution_count": 238,
-   "id": "8712dfe0",
+   "id": "2098aa6f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5337,7 +5337,7 @@
   {
    "cell_type": "code",
    "execution_count": 239,
-   "id": "41c47b4c",
+   "id": "0b67eb90",
    "metadata": {},
    "outputs": [
     {
@@ -5358,7 +5358,7 @@
   {
    "cell_type": "code",
    "execution_count": 240,
-   "id": "548d739b",
+   "id": "0923ad22",
    "metadata": {},
    "outputs": [
     {
@@ -5378,7 +5378,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "024ca39d",
+   "id": "fbdf9052",
    "metadata": {},
    "source": [
     "# MAchine Learning"
@@ -5387,7 +5387,7 @@
   {
    "cell_type": "code",
    "execution_count": 234,
-   "id": "fc25edb3",
+   "id": "744947b4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5402,7 +5402,7 @@
   {
    "cell_type": "code",
    "execution_count": 242,
-   "id": "036b81da",
+   "id": "617032b6",
    "metadata": {},
    "outputs": [
     {
@@ -5455,7 +5455,7 @@
   {
    "cell_type": "code",
    "execution_count": 244,
-   "id": "6463cc61",
+   "id": "82fafed3",
    "metadata": {},
    "outputs": [
     {
@@ -5479,7 +5479,7 @@
   {
    "cell_type": "code",
    "execution_count": 245,
-   "id": "8a78a6cf",
+   "id": "9fbcec33",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5500,7 +5500,7 @@
   {
    "cell_type": "code",
    "execution_count": 246,
-   "id": "99e84e37",
+   "id": "7366e8b2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5524,7 +5524,7 @@
   {
    "cell_type": "code",
    "execution_count": 247,
-   "id": "b9dce25b",
+   "id": "d8c915c2",
    "metadata": {},
    "outputs": [
     {
@@ -5647,7 +5647,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9c86ccf0",
+   "id": "747c1a7c",
    "metadata": {},
    "source": [
     "# CROSS Validation"
@@ -5656,7 +5656,7 @@
   {
    "cell_type": "code",
    "execution_count": 248,
-   "id": "05b176d4",
+   "id": "53d97f3d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5666,7 +5666,7 @@
   {
    "cell_type": "code",
    "execution_count": 249,
-   "id": "49137ddb",
+   "id": "72593985",
    "metadata": {},
    "outputs": [
     {
@@ -5741,7 +5741,7 @@
   {
    "cell_type": "code",
    "execution_count": 250,
-   "id": "5b315567",
+   "id": "d3af80ea",
    "metadata": {},
    "outputs": [
     {
@@ -5815,9 +5815,151 @@
    ]
   },
   {
+   "cell_type": "raw",
+   "id": "09b07397",
+   "metadata": {},
+   "source": [
+    "# For a generalize model  XGBRegressor is giving the least difference \n",
+    "Root mean_square of  XGBRegressor   9.054578693861997\n",
+    "cross Validation score of root mean square  8.880877463398468"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "472c9912",
+   "metadata": {},
+   "source": [
+    "# Hypertuning of XGBRegressor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 254,
+   "id": "2d73ebf3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import GridSearchCV"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 255,
+   "id": "22cf4bdd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "params= {\"learning_rate\"    : [0.01,.05,.1,.2,.3,.5 ] ,\n",
+    " \"max_depth\"        : [ 3, 4, 5, 6, 8],\n",
+    " \"min_child_weight\" : [ 1, 3, 5, 7 ],\n",
+    " \"gamma\"            : [ 0.01, 0.05,0.1, 0.2 , 0.3],\n",
+    " \"colsample_bytree\" : [ 0.3, 0.4, 0.5 , 0.7 ] }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 257,
+   "id": "8805ea48",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "GridSearchCV(cv=5,\n",
+       "             estimator=XGBRegressor(base_score=0.5, booster='gbtree',\n",
+       "                                    colsample_bylevel=1, colsample_bynode=1,\n",
+       "                                    colsample_bytree=1,\n",
+       "                                    enable_categorical=False, gamma=0,\n",
+       "                                    gpu_id=-1, importance_type=None,\n",
+       "                                    interaction_constraints='',\n",
+       "                                    learning_rate=0.300000012, max_delta_step=0,\n",
+       "                                    max_depth=6, min_child_weight=1,\n",
+       "                                    missing=nan, monotone_constraints='()',\n",
+       "                                    n_estimators=100...\n",
+       "                                    random_state=0, reg_alpha=0, reg_lambda=1,\n",
+       "                                    scale_pos_weight=1, subsample=1,\n",
+       "                                    tree_method='exact', validate_parameters=1,\n",
+       "                                    verbosity=None),\n",
+       "             n_jobs=-1,\n",
+       "             param_grid={'colsample_bytree': [0.3, 0.4, 0.5, 0.7],\n",
+       "                         'gamma': [0.01, 0.05, 0.1, 0.2, 0.3],\n",
+       "                         'learning_rate': [0.01, 0.05, 0.1, 0.2, 0.3, 0.5],\n",
+       "                         'max_depth': [3, 4, 5, 6, 8],\n",
+       "                         'min_child_weight': [1, 3, 5, 7]},\n",
+       "             scoring='neg_mean_squared_error')"
+      ]
+     },
+     "execution_count": 257,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "GCV= GridSearchCV(XGB_model,params,cv=5,scoring='neg_mean_squared_error', n_jobs=-1)\n",
+    "GCV.fit(x_train,y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 258,
+   "id": "592e0a77",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'colsample_bytree': 0.3,\n",
+       " 'gamma': 0.01,\n",
+       " 'learning_rate': 0.2,\n",
+       " 'max_depth': 4,\n",
+       " 'min_child_weight': 3}"
+      ]
+     },
+     "execution_count": 258,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "GCV.best_params_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 259,
+   "id": "a27e3a66",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "76.23911029390486"
+      ]
+     },
+     "execution_count": 259,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "GCV_pred=GCV.best_estimator_.predict(x_test)\n",
+    "mean_squared_error(y_test,GCV_pred)\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "316150a2",
+   "id": "9ce42fc2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# error has been reduced to 76 from 81.98"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e5f5dd65",
    "metadata": {},
    "outputs": [],
    "source": []
