--- a/Baseball Case Study.ipynb
+++ b/Baseball Case Study.ipynb
@@ -3757,7 +3757,7 @@
   {
    "cell_type": "code",
    "execution_count": 196,
-   "id": "bd285314",
+   "id": "f62945de",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3767,7 +3767,7 @@
   {
    "cell_type": "code",
    "execution_count": 197,
-   "id": "b91e0938",
+   "id": "c31a14cd",
    "metadata": {},
    "outputs": [
     {
@@ -3912,7 +3912,7 @@
   {
    "cell_type": "code",
    "execution_count": 198,
-   "id": "9e1c0bee",
+   "id": "c37128ed",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3923,7 +3923,7 @@
   {
    "cell_type": "code",
    "execution_count": 199,
-   "id": "aaf97d1f",
+   "id": "34d91f5d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3933,7 +3933,7 @@
   {
    "cell_type": "code",
    "execution_count": 200,
-   "id": "58dc34e5",
+   "id": "2d698f41",
    "metadata": {},
    "outputs": [
     {
@@ -4033,7 +4033,7 @@
   {
    "cell_type": "code",
    "execution_count": 201,
-   "id": "551b48e8",
+   "id": "7a46e68f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4043,7 +4043,7 @@
   {
    "cell_type": "code",
    "execution_count": 202,
-   "id": "548624ca",
+   "id": "bef5047c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4056,7 +4056,7 @@
   {
    "cell_type": "code",
    "execution_count": 203,
-   "id": "c70129b4",
+   "id": "0f8ed590",
    "metadata": {},
    "outputs": [
     {
@@ -4195,7 +4195,7 @@
   {
    "cell_type": "code",
    "execution_count": 204,
-   "id": "d2de3fa4",
+   "id": "7f5b8291",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4205,7 +4205,7 @@
   {
    "cell_type": "code",
    "execution_count": 205,
-   "id": "dea6fa53",
+   "id": "79d9e2a6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4215,7 +4215,7 @@
   {
    "cell_type": "code",
    "execution_count": 206,
-   "id": "f7fcbf11",
+   "id": "bc6aaa75",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4225,7 +4225,7 @@
   {
    "cell_type": "code",
    "execution_count": 207,
-   "id": "471492dc",
+   "id": "b3c3566f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4238,7 +4238,7 @@
   {
    "cell_type": "code",
    "execution_count": 208,
-   "id": "70876aaa",
+   "id": "34e52e91",
    "metadata": {},
    "outputs": [
     {
@@ -4371,7 +4371,7 @@
   {
    "cell_type": "code",
    "execution_count": 209,
-   "id": "6cbf2aeb",
+   "id": "b6796697",
    "metadata": {},
    "outputs": [
     {
@@ -4486,7 +4486,7 @@
   {
    "cell_type": "code",
    "execution_count": 210,
-   "id": "8b5d054a",
+   "id": "36bbca90",
    "metadata": {},
    "outputs": [
     {
@@ -4520,7 +4520,7 @@
   {
    "cell_type": "code",
    "execution_count": 211,
-   "id": "881cd6af",
+   "id": "18603bfd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4530,7 +4530,7 @@
   {
    "cell_type": "code",
    "execution_count": 212,
-   "id": "1324ffae",
+   "id": "a4d26517",
    "metadata": {},
    "outputs": [
     {
@@ -4564,7 +4564,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "73877f5e",
+   "id": "e6976551",
    "metadata": {},
    "source": [
     "# Outliers"
@@ -4573,7 +4573,7 @@
   {
    "cell_type": "code",
    "execution_count": 213,
-   "id": "ff444976",
+   "id": "f8ede8e9",
    "metadata": {},
    "outputs": [
     {
@@ -4754,7 +4754,7 @@
   {
    "cell_type": "code",
    "execution_count": 214,
-   "id": "c227b3db",
+   "id": "8b4687ff",
    "metadata": {},
    "outputs": [
     {
@@ -4777,7 +4777,7 @@
   {
    "cell_type": "code",
    "execution_count": 215,
-   "id": "706c7c82",
+   "id": "ec38ef54",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4787,7 +4787,7 @@
   {
    "cell_type": "code",
    "execution_count": 216,
-   "id": "97ffe522",
+   "id": "c2829eb4",
    "metadata": {},
    "outputs": [
     {
@@ -4811,7 +4811,7 @@
   {
    "cell_type": "code",
    "execution_count": 217,
-   "id": "2873e048",
+   "id": "2410f9ce",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4821,7 +4821,7 @@
   {
    "cell_type": "code",
    "execution_count": 218,
-   "id": "6310a9d9",
+   "id": "a372361a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4835,7 +4835,7 @@
   {
    "cell_type": "code",
    "execution_count": 219,
-   "id": "e4c0534a",
+   "id": "09d0312a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4849,7 +4849,7 @@
   {
    "cell_type": "code",
    "execution_count": 220,
-   "id": "9876a818",
+   "id": "1b99d50d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4863,7 +4863,7 @@
   {
    "cell_type": "code",
    "execution_count": 221,
-   "id": "0848ee71",
+   "id": "a31cc98b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4877,7 +4877,7 @@
   {
    "cell_type": "code",
    "execution_count": 222,
-   "id": "8d4faf25",
+   "id": "e4d129f6",
    "metadata": {},
    "outputs": [
     {
@@ -5058,7 +5058,7 @@
   {
    "cell_type": "code",
    "execution_count": 223,
-   "id": "64ef4d39",
+   "id": "74541dab",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5068,7 +5068,7 @@
   {
    "cell_type": "code",
    "execution_count": 224,
-   "id": "876f7413",
+   "id": "4803258c",
    "metadata": {},
    "outputs": [
     {
@@ -5103,7 +5103,7 @@
   {
    "cell_type": "code",
    "execution_count": 225,
-   "id": "ba51441b",
+   "id": "6629bbcf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5112,7 +5112,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "76a6252b",
+   "id": "e0d72ab2",
    "metadata": {},
    "source": [
     "# Transformation"
@@ -5121,7 +5121,7 @@
   {
    "cell_type": "code",
    "execution_count": 226,
-   "id": "5151239a",
+   "id": "6b20fc6f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5132,7 +5132,7 @@
   {
    "cell_type": "code",
    "execution_count": 229,
-   "id": "584ee766",
+   "id": "9dbe6e6e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5143,7 +5143,7 @@
   {
    "cell_type": "code",
    "execution_count": 230,
-   "id": "9bbc02a4",
+   "id": "f22361d5",
    "metadata": {},
    "outputs": [
     {
@@ -5178,7 +5178,7 @@
   {
    "cell_type": "code",
    "execution_count": 231,
-   "id": "70b77ba4",
+   "id": "11f6b50e",
    "metadata": {},
    "outputs": [
     {
@@ -5279,7 +5279,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0ded28e9",
+   "id": "63ec8548",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5288,7 +5288,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2ae9f771",
+   "id": "c315cf0f",
    "metadata": {},
    "source": [
     "# Standardization"
@@ -5297,7 +5297,7 @@
   {
    "cell_type": "code",
    "execution_count": 232,
-   "id": "b64b2791",
+   "id": "5d26ac84",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5308,7 +5308,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0c931008",
+   "id": "9ea9c694",
    "metadata": {},
    "source": [
     "# Seprate independent and dependent features"
@@ -5317,7 +5317,7 @@
   {
    "cell_type": "code",
    "execution_count": 237,
-   "id": "45ea4010",
+   "id": "864b6dfe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5327,7 +5327,7 @@
   {
    "cell_type": "code",
    "execution_count": 238,
-   "id": "2098aa6f",
+   "id": "7a559a48",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5337,7 +5337,7 @@
   {
    "cell_type": "code",
    "execution_count": 239,
-   "id": "0b67eb90",
+   "id": "d5486102",
    "metadata": {},
    "outputs": [
     {
@@ -5358,7 +5358,7 @@
   {
    "cell_type": "code",
    "execution_count": 240,
-   "id": "0923ad22",
+   "id": "13416b1d",
    "metadata": {},
    "outputs": [
     {
@@ -5378,7 +5378,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fbdf9052",
+   "id": "d8abcc85",
    "metadata": {},
    "source": [
     "# MAchine Learning"
@@ -5387,7 +5387,7 @@
   {
    "cell_type": "code",
    "execution_count": 234,
-   "id": "744947b4",
+   "id": "6c61d57e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5402,7 +5402,7 @@
   {
    "cell_type": "code",
    "execution_count": 242,
-   "id": "617032b6",
+   "id": "b1b8486d",
    "metadata": {},
    "outputs": [
     {
@@ -5455,7 +5455,7 @@
   {
    "cell_type": "code",
    "execution_count": 244,
-   "id": "82fafed3",
+   "id": "4bd11252",
    "metadata": {},
    "outputs": [
     {
@@ -5479,7 +5479,7 @@
   {
    "cell_type": "code",
    "execution_count": 245,
-   "id": "9fbcec33",
+   "id": "e436edef",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5500,7 +5500,7 @@
   {
    "cell_type": "code",
    "execution_count": 246,
-   "id": "7366e8b2",
+   "id": "49aa9f95",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5524,7 +5524,7 @@
   {
    "cell_type": "code",
    "execution_count": 247,
-   "id": "d8c915c2",
+   "id": "67a3459c",
    "metadata": {},
    "outputs": [
     {
@@ -5647,7 +5647,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "747c1a7c",
+   "id": "5edc6bf3",
    "metadata": {},
    "source": [
     "# CROSS Validation"
@@ -5656,7 +5656,7 @@
   {
    "cell_type": "code",
    "execution_count": 248,
-   "id": "53d97f3d",
+   "id": "9ff583f4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5666,7 +5666,7 @@
   {
    "cell_type": "code",
    "execution_count": 249,
-   "id": "72593985",
+   "id": "15d0d3e5",
    "metadata": {},
    "outputs": [
     {
@@ -5741,7 +5741,7 @@
   {
    "cell_type": "code",
    "execution_count": 250,
-   "id": "d3af80ea",
+   "id": "65b7b225",
    "metadata": {},
    "outputs": [
     {
@@ -5816,7 +5816,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "09b07397",
+   "id": "8cd14018",
    "metadata": {},
    "source": [
     "# For a generalize model  XGBRegressor is giving the least difference \n",
@@ -5826,7 +5826,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "472c9912",
+   "id": "4fa8fcd8",
    "metadata": {},
    "source": [
     "# Hypertuning of XGBRegressor"
@@ -5835,7 +5835,7 @@
   {
    "cell_type": "code",
    "execution_count": 254,
-   "id": "2d73ebf3",
+   "id": "cd66030d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5845,7 +5845,7 @@
   {
    "cell_type": "code",
    "execution_count": 255,
-   "id": "22cf4bdd",
+   "id": "7a9ba615",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5859,7 +5859,7 @@
   {
    "cell_type": "code",
    "execution_count": 257,
-   "id": "8805ea48",
+   "id": "141985df",
    "metadata": {},
    "outputs": [
     {
@@ -5902,7 +5902,7 @@
   {
    "cell_type": "code",
    "execution_count": 258,
-   "id": "592e0a77",
+   "id": "8da08ba0",
    "metadata": {},
    "outputs": [
     {
@@ -5927,7 +5927,7 @@
   {
    "cell_type": "code",
    "execution_count": 259,
-   "id": "a27e3a66",
+   "id": "be061dea",
    "metadata": {},
    "outputs": [
     {
@@ -5949,7 +5949,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9ce42fc2",
+   "id": "bf7ff52a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5957,9 +5957,39 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ff36bfc9",
+   "metadata": {},
+   "source": [
+    "# Saving model in pickle format"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 260,
+   "id": "1f0b914d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Baseball.pkl']"
+      ]
+     },
+     "execution_count": 260,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import joblib\n",
+    "joblib.dump(GCV.best_estimator_,\"Baseball.pkl\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e5f5dd65",
+   "id": "d89feb2e",
    "metadata": {},
    "outputs": [],
    "source": []
